@@ -4,6 +4,11 @@ History of feedfeeder
 2.0.5 (unreleased)
 ------------------
 
+- Register our own documentbyline viewlet for feed items, which
+  displays the feed item author as creator.
+  Refs http://plone.org/products/feedfeeder/issues/36
+  [Maurits]
+
 - Fixed possible UnicodeDecodeError when updating feed items.
   Refs http://plone.org/products/feedfeeder/issues/37
   [maurits]
